# cse554-winter-2026

./: .gitignore
W2L3/: branch.cu  reduction1.cu  reduction2.cu  reduction3.cu  reduction4.cu  reduction5.cu  reduction_backup1.cu  torch_reduction.py  torch_transpose.py  transpose_v1.cu  transpose_v2.cu  transpose_v3.cu  transpose_v4.cu  transpose_v5.cu
assignment1/: make_and_run_all.sh
assignment1/host_GPU/: CMakeLists.txt  bandwidth_benchmark.cu  bandwidth_results.csv  copy_first_column.cu  copy_first_column.h  main.cu  make_and_run.sh  plot_bandwidth.py
assignment1/rms_norm/matrix/: main.cu  make_and_run.sh  rms_norm_matrix.cu  rms_norm_matrix.h
assignment1/rms_norm/vector/: main.cu  make_and_run.sh  rms_norm_vector.cu  rms_norm_vector.h
assignment1/silu/: silu_torch.py  silu_triton_kernel.py  silu_triton_test.py
assignment1/silu/CUDA/: main.cu  make_and_run.sh  report_silu.ncu-rep  silu.cu  silu.h
assignment2/: different_prefill.py  helper.py  no_kv.py  run_everything.sh  single_batch.py  uniform_prefill.py
assignment3/Section1/: analyze_best_kernels.py  gemm_perf.csv  parse_cutlass_results.py  plot_gemm.py  prof_cublas_gemm  prof_cublas_gemm.cu  run_cutlass_profiler.sh  run_section1.sh
transformer/: helper.py  transformer.py
transformer/chatbot/: __main__.py
